// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hand /> renders properly 1`] = `
<ForwardRef(Card2)
  variant="outline"
>
  <Tooltip
    hasArrow={true}
    label="Shuffle hand"
  >
    <IconButton
      aria-label="Shuffle hand"
      icon={<FaShuffle />}
      isDisabled={true}
      onClick={[Function]}
    />
  </Tooltip>
  <Flex
    direction="column"
    height="485px"
    minWidth="78px"
    p={1}
    wrap="wrap"
  />
</ForwardRef(Card2)>
`;

exports[`<Hand /> renders properly with player 1`] = `
<ForwardRef(Card2)
  variant="outline"
>
  <Tooltip
    hasArrow={true}
    label="Shuffle hand"
  >
    <IconButton
      aria-label="Shuffle hand"
      icon={<FaShuffle />}
      isDisabled={false}
      onClick={[Function]}
    />
  </Tooltip>
  <Flex
    direction="column"
    height="-15px"
    minWidth="78px"
    p={1}
    wrap="wrap"
  >
    <Tile
      boardLocation={null}
      key="A1"
      tile={
        {
          "id": "A1",
          "letter": "A",
        }
      }
    />
    <Tile
      boardLocation={null}
      key="B1"
      tile={
        {
          "id": "B1",
          "letter": "B",
        }
      }
    />
    <Tile
      boardLocation={null}
      key="C1"
      tile={
        {
          "id": "C1",
          "letter": "C",
        }
      }
    />
  </Flex>
</ForwardRef(Card2)>
`;
